# Parameter-Server

./: CMakeLists.txt  constants.h  main.cpp  matrix.cpp  matrix.h  message.pb.cc  message.pb.h  message.proto  message_type.h  mpi_helper.cpp  mpi_helper.h  param_server  readme.md  run.py  scheduler.cpp  scheduler.h  server.cpp  server.h  worker.cpp  worker.h
data/: data1-svm.txt  data1.train  try.train
